manifests/python-app/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: okteto-python-app
spec:
  selector:
    app: python-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
